compiler/testData/diagnostics/testsWithJsStdLib/name/classAndFunction.kt
package foo

class <!JS_NAME_CLASH!>A(konst x: Int)<!>

<!JS_NAME_CLASH!>fun A()<!> {}